--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.3.61'
-    ext.navigationVersion = "2.1.0-alpha06"
+    ext.navigationVersion = "2.3.0-alpha03"
     repositories {
         google()
         jcenter()
@@ -44,22 +44,22 @@ ext {
     androidXTestRulesVersion = '1.2.0-beta01'
     androidXAnnotations = '1.0.1'
     androidXLegacySupport = '1.0.0'
-    appCompatVersion = '1.0.2'
-    archLifecycleVersion = '2.2.0-alpha01'
+    appCompatVersion = '1.1.0'
+    archLifecycleVersion = '2.2.0'
     archTestingVersion = '2.0.0'
     cardVersion = '1.0.0'
     coroutinesVersion = '1.2.1'
     dexMakerVersion = '2.12.1'
-    espressoVersion = '3.2.0-beta01'
-    fragmentVersion = '1.1.0-alpha07'
-    fragmentKtxVersion = '1.1.0-rc01'
+    espressoVersion = '3.3.0-alpha04'
+    fragmentVersion = '1.3.0-alpha01'
+    fragmentKtxVersion = '1.3.0-alpha01'
     hamcrestVersion = '1.3'
     junitVersion = '4.12'
-    materialVersion = '1.0.0'
+    materialVersion = '1.1.0'
     mockitoVersion = '2.8.9'
-    recyclerViewVersion = '1.0.0'
+    recyclerViewVersion = '1.1.0'
     robolectricVersion = '4.3.1'
-    roomVersion = '2.1.0'
+    roomVersion = '2.2.4'
     rulesVersion = '1.0.1'
     timberVersion = '4.7.1'
     truthVersion = '0.44'
