--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,4 +114,8 @@ dependencies {
     kapt "com.google.dagger:dagger-android-processor:$dagger"
     api "com.google.dagger:dagger:$dagger"
     kapt "com.google.dagger:dagger-compiler:$dagger"
+
+    // Glide
+    implementation "com.github.bumptech.glide:glide:$glide"
+    kapt "com.github.bumptech.glide:compiler:$glide"
 }
